crates/diffguard-app/src/snapshots/diffguard_app__csv__tests__snapshot_tsv_no_findings.snap
---
source: crates/diffguard-app/src/csv.rs
expression: tsv
---
file	line	rule_id	severity	message	snippet
