crates/diffguard-app/src/snapshots/diffguard_app__csv__tests__snapshot_tsv_special_chars.snap
---
source: crates/diffguard-app/src/csv.rs
expression: tsv
---
file	line	rule_id	severity	message	snippet
src/file.rs	5	test.rule	warn	Message with "quotes" and, commas	let s = "hello\nworld";
